added new tests

--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "debug:trace": "npx playwright test tests/demo/debug.make.appointment.spec.ts --project=chromium --trace on",
+    "debug:cli": "PWDEBUG=1 npx playwright test tests/demo/debug.make.appointment.spec.ts --project=chromium",
+    "debug:ui": "npx playwright test tests/demo/debug.make.appointment.spec.ts --ui --headed --project=chromium",
+    "debug": "npx playwright test tests/demo/debug.make.appointment.spec.ts --headed --project=chromium",
+    "debug:pw-api": "DEBUG=pw:api npx playwright test tests/demo/debug.make.appointment.spec.ts --headed --project=chromium",
+    "demo:tag": "npx playwright test --grep @smoke --headed --project=chromium",
+    "demo:global": "npx playwright test tests/functional/login.spec.ts --project=chromium",
+    "pw-basic-cap": "npx playwright test tests/demo/pw.basic.cap.make.appointment.spec.ts --headed --project=chromium",
+    "demoConfig": "npx playwright test tests/demo/demo.config.spec.ts --headed --project=chromium",
     "login": "npx playwright test tests/functional/login.spec.ts --headed --project=chromium",
-
     "demoEdge": "npx playwright test tests/demo/mytest.spec.ts --headed --project=edge",
     "demoChrome": "npx playwright test tests/demo/mytest.spec.ts --headed --project=chrome",
     "demoFF": "npx playwright test tests/demo/mytest.spec.ts --headed --project=firefox"
-
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.9.2"
+    "@types/node": "^24.9.2",
+    "allure-playwright": "^3.4.2",
+    "dotenv": "^17.2.3"
   }
 }
